less/variables.less
@main-content: #222629;
@font-styles: #fff;
@button-styles: #ff3b3f;
@header-footer: #86c232;
@border-style: #6b6e70;

@h-fonts: 'Anton', sans-serif;;

@page-margin: 0;
@section-padding: 5rem;
@mobile-padding: 3rem;
@mobile-header-padding: 6rem 3rem 0;
@mobile: ~"(max-width: 500px)";
@tablet: ~"(max-width: 1000px)";

